// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`note-api note-api create/retrieve notes should confirm that the note has been deleted 1`] = `
Object {
  "_id": StringMatching /\\^\\[0-9a-f\\]\\{24\\}\\$/i,
  "locationId": StringMatching /\\^\\[0-9a-f\\]\\{24\\}\\$/i,
  "notes": Array [],
  "title": "Plant Title 0",
  "userId": StringMatching /\\^\\[0-9a-f\\]\\{24\\}\\$/i,
}
`;

exports[`note-api note-api create/retrieve notes should delete the note 1`] = `
Object {
  "success": true,
}
`;

exports[`note-api note-api create/retrieve notes should retrieve the just updated noteId as part of a plant request 1`] = `
Object {
  "_id": StringMatching /\\^\\[0-9a-f\\]\\{24\\}\\$/i,
  "locationId": StringMatching /\\^\\[0-9a-f\\]\\{24\\}\\$/i,
  "notes": Array [
    StringMatching /\\^\\[0-9a-f\\]\\{24\\}\\$/i,
  ],
  "title": "Plant Title 0",
  "userId": StringMatching /\\^\\[0-9a-f\\]\\{24\\}\\$/i,
}
`;

exports[`note-api note-api create/retrieve notes should retrieve the noteId as part of a multiple note request 1`] = `
Object {
  "_id": StringMatching /\\^\\[0-9a-f\\]\\{24\\}\\$/i,
  "date": 20160101,
  "metrics": Object {
    "firstBlossom": true,
    "firstBud": true,
    "girth": 5,
    "harvestCount": 1,
    "harvestEnd": true,
    "harvestStart": true,
    "harvestWeight": 3.6,
    "height": 65,
    "lastBlossom": true,
    "leafShedEnd": true,
    "leafShedStart": true,
  },
  "note": "A New Note",
  "plantIds": Array [
    StringMatching /\\^\\[0-9a-f\\]\\{24\\}\\$/i,
  ],
  "userId": StringMatching /\\^\\[0-9a-f\\]\\{24\\}\\$/i,
}
`;

exports[`note-api note-api create/retrieve notes should retrieve the noteId as part of a plantId note request 1`] = `
Object {
  "_id": StringMatching /\\^\\[0-9a-f\\]\\{24\\}\\$/i,
  "date": 20160101,
  "metrics": Object {
    "firstBlossom": true,
    "firstBud": true,
    "girth": 5,
    "harvestCount": 1,
    "harvestEnd": true,
    "harvestStart": true,
    "harvestWeight": 3.6,
    "height": 65,
    "lastBlossom": true,
    "leafShedEnd": true,
    "leafShedStart": true,
  },
  "note": "A New Note",
  "plantIds": Array [
    StringMatching /\\^\\[0-9a-f\\]\\{24\\}\\$/i,
  ],
  "userId": StringMatching /\\^\\[0-9a-f\\]\\{24\\}\\$/i,
}
`;

exports[`note-api note-api create/retrieve notes should update the just created note 1`] = `
Object {
  "note": Object {
    "_id": StringMatching /\\^\\[0-9a-f\\]\\{24\\}\\$/i,
    "date": 20160101,
    "metrics": Object {
      "firstBlossom": true,
      "firstBud": true,
      "girth": 5,
      "harvestCount": 1,
      "harvestEnd": true,
      "harvestStart": true,
      "harvestWeight": 3.6,
      "height": 65,
      "lastBlossom": true,
      "leafShedEnd": true,
      "leafShedStart": true,
    },
    "note": "A New Note",
    "plantIds": Array [
      StringMatching /\\^\\[0-9a-f\\]\\{24\\}\\$/i,
    ],
    "userId": StringMatching /\\^\\[0-9a-f\\]\\{24\\}\\$/i,
  },
  "success": true,
}
`;
